tests/sources/invalid/classes/class_errors.fire
// Class error tests - comprehensive

// Undefined class
fn void use_undefined_class() {  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-PARSE-0012 @9
    UndefinedClass obj;  //~ ERROR FS-PARSE-0010 @5
}

// Accessing undefined field
class Point {
    int32 x;
    int32 y;
}

fn void undefined_field() {  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-PARSE-0012 @9
    Point p;  //~ ERROR FS-PARSE-0010 @12
    int32 z = p.z;  // Field 'z' doesn't exist  //~ ERROR FS-PARSE-0003 @15
}

// Field type mismatch
fn void field_type_mismatch() {  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-PARSE-0012 @9
    Point p;  //~ ERROR FS-PARSE-0010 @12
    p.x = "string";  // x is int32, not string  //~ ERROR FS-PARSE-0003 @5
}

// Calling undefined method
fn void undefined_method() {  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-PARSE-0012 @9
    Point p;  //~ ERROR FS-PARSE-0010 @12
    p.move(5, 10);  // Point has no 'move' method  //~ ERROR FS-PARSE-0003 @5
}

// Accessing private field (if privacy is implemented)
class Private {
    int32 secret;
}

// Duplicate class definition
class DuplicateClass {
    int32 x;
}

class DuplicateClass {  // Duplicate
    int32 y;
}

// Duplicate field in class
class DuplicateField {
    int32 x;
    int32 x;  // Duplicate field name
}

// Using class name as variable
fn void class_as_var() {  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-PARSE-0012 @9
    int32 Point = 5;  // Point is already a class name
}

// Missing required initialization
class MustInit {
    int32 required;
}

fn void missing_init() {  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-PARSE-0012 @9
    MustInit obj;  // May need initialization  //~ ERROR FS-PARSE-0010 @17
    println(obj.required);  //~ ERROR FS-PARSE-0012 @5
}
